[package]
name = "git-thing"
authors = ["Goitseone Themba <goitseonerozthemba@gmail.com>"]
description = "A cli tool to manage multiple git profiles"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Goitseone-Themba/git-thing.git"
license = "MIT"
readme = "README.md"
keywords = ["git", "cli", "profiles", "management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.48", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
